# main_project

./: CMakeLists.txt  CMakePresets.json  README.md
assets/: icon_placeholder.txt  preview_placeholder.txt
config/: presets.json
src/: main.cpp
src/app/: App.cpp  App.hpp
src/data/: SkinItem.hpp  SkinRepository.cpp
src/ui/: Theme.cpp  Theme.hpp
src/ui/Windows/: CatalogWindow.cpp  EditorWindow.cpp
